<resources>
    <string name="app_name">Test11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transfer_internally">Transfer internally</string>
    <string name="from">From</string>
    <string name="cash">Cash</string>
    <string name="_2345">**** 2345</string>
    <string name="_350">350 €</string>
    <string name="to">To</string>
    <string name="sell">Sell</string>
    <string name="_250">250 $</string>
    <string name="balance">Balance :</string>
    <string name="id">id</string>
    <string name="account_number">Account Number</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="validate">Validate</string>
</resources>