<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presenter.screen.HomeFragment"
    android:background="@color/background">

    <TextView
        android:id="@+id/headerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transfer_internally"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"/>


    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/text_grey"
        android:text="@string/from"
        app:layout_constraintStart_toStartOf="@id/fromFrame"
        app:layout_constraintBottom_toTopOf="@id/fromFrame"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fromFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/shape_input_field"
        app:layout_constraintTop_toBottomOf="@id/headerTv"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/image_logo_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_visa_32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/text_account_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cash"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image_logo_from"
            app:layout_constraintTop_toTopOf="@id/image_logo_from"
/>

        <TextView
            android:id="@+id/text_account_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2345"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_account_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_350"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/image_logo_from"
            app:layout_constraintStart_toEndOf="@id/image_logo_from"
            app:layout_constraintTop_toBottomOf="@id/text_account_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/tvTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="@color/text_grey"
        android:text="@string/to"
        app:layout_constraintStart_toStartOf="@id/toFrame"
        app:layout_constraintBottom_toTopOf="@id/toFrame"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="5dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/shape_input_field"
        app:layout_constraintTop_toBottomOf="@id/fromFrame"
        android:layout_marginTop="30dp">

        <ImageView
            android:id="@+id/image_logo_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_visa_32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/text_account_name_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/cash"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/image_logo_to"
            app:layout_constraintTop_toTopOf="@id/image_logo_to"
            />

        <TextView
            android:id="@+id/text_account_number_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2345"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_account_balance_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/_350"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/image_logo_to"
            app:layout_constraintStart_toEndOf="@id/image_logo_to"
            app:layout_constraintTop_toBottomOf="@id/text_account_name_to" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/shape_buttons_shape"
        android:padding="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toFrame"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp">

        <TextView
            android:id="@+id/sellTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:text="@string/sell"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/priseTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:text="@string/_250"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </FrameLayout>


    <ProgressBar
    android:id="@+id/progressBar"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="50dp"
    app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
    android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>